# docs/02-design-specs/api-contracts/openapi.yaml
@@ -321,6 +321,36 @@ paths:
                   $ref: "#/components/schemas/WordBankResponse"
         "404":
           $ref: "#/components/responses/NotFound"
+  /users/{userId}:memoryGameTargets:
+    post:
+      operationId: getMemoryGameTargets
+      tags:
+        - Users
+      summary: Get a list of target words for a memory matching game
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: count
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 8
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/WordBankResponse"
+        "404":
+          $ref: "#/components/responses/NotFound"
   /users/{userId}/daily-progresses:
     post:
       operationId: createDailyProgress
